@@ -1,0 +1,19 @@
+Function: nfeltredmodpower
+Section: number_fields
+C-Name: nfeltredmodpower
+Prototype: GGUD0,U,
+Help: nfredmodpowers(nf,x,n,{B=primelimit}): return [v,b] such that x=v*b^k and v small,
+ assuming the prime factor of v are less than B.
+Doc: let \var{nf} be a number field and $n > 0$ be a positive integer.
+ Return $[v,b]$ such that $x=v\*b^k$ and $v$ small, assuming the prime factor
+ of $v$ are less than $B$ (\var{primelimit} by default).
+ Return $[]$ if it is not the case.
+ \bprog
+ ? nf = nfinit(x^6+108);
+ ? a = Mod(x,x^6+108);
+ ? u = (2*a^2+a+3)*random(2^1000*x^6)^6;
+ ? [v,b] = nfeltredmodpower(nf,u,2);
+ ? nfeltmul(nf,u,nfeltpow(nf,b,2))==v
+ ? v
+ %10 = [79,108,44,80,11,15]~
+ @eprog\noindent
