@@ -220,4 +220,6 @@
 []
   *** nfinit: Warning: non-monic polynomial. Result of the form [nf,c].
 [[2, [0, 1]~, 2, 1, [0, -2; 1, 0]]]
-Total time spent: 27
+1
+[17, 20, 12, 14, -12, 11]~
+Total time spent: 68
