@@ -117,3 +117,10 @@ idealprimedec(K,17,1)
 
 K=nfinit(2*x^2+1);
 idealprimedec(K,2)
+
+nf=nfinit(x^6+108);
+a=Mod(x,x^6+108);
+u=nfalgtobasis(nf,(2*a^2+a+3)*random(2^100*x^6)^6);
+[v,b]=nfeltredmodpower(nf,u,2);
+nfeltmul(nf,u,nfeltpow(nf,b,2))==v
+v
